add a state for labels in editor and edit CIL , CIR functions

--- a/style.css
+++ b/style.css
@@ -219,9 +219,9 @@ footer p {
     font-size: 0.6rem;
     margin: 0;
     color: darkblue;
-    position: absolute;
-    bottom: 0.5rem;
-    right: 50%;
+    /* position: absolute; */
+    /* bottom: 0.5rem; */
+    /* right: 50%; */
     font-weight: 1000;
 }
 
