--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@ button {
 }
 
 .memory-table table {
+    table-layout: fixed;
     width: 90%;
     margin: 0 auto;
     overflow-y: auto;
@@ -122,7 +123,7 @@ button {
     flex-direction: column;
     justify-content: center;
     justify-content: space-around;
-    font-size: 0.9rem;
+    font-size: 0.8rem;
 }
 
 .instruction-table table {
@@ -189,7 +190,7 @@ button {
 }
 
 .instruction-table table .info-column {
-    width: 20%;
+    width: 25%;
 }
 
 .instruction-table table,
@@ -237,12 +238,6 @@ footer p {
     position: sticky;
     background-color: aquamarine;
     color: black;
-}
-
-#endProgram_notif {
-    text-align: center;
-    color: rgb(52, 52, 253);
-    display: none;
 }
 
 .show {
@@ -319,4 +314,84 @@ footer p {
 
 .myself {
     color: #45f0cb;
+}
+
+.box-modal {
+    display: none;
+    text-align: center;
+    width: 30%;
+    height: 20%;
+    background-color: rgb(11, 51, 51);
+    color: white;
+    z-index: 5;
+    position: absolute;
+    top: 30%;
+    left: 35%;
+}
+
+.flex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.box-shadow {
+    display: none;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.6);
+    height: 100vh;
+    width: 100vw;
+    z-index: 3;
+}
+
+.errors {
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.close-errorsBtn {
+    width: 20%;
+    cursor: pointer;
+    border: 0;
+    padding: 0.5rem 1rem;
+    color: black;
+    background-color: #45f0cb;
+    border-radius: 5px;
+    font-size: 0.7rem;
+}
+
+#endProgram_notif,
+#errorLine_container {
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.show-instruction {
+    background-color: rgb(163, 255, 240);
+    padding-left: 0.9rem;
+    padding-top: 0.9rem;
+    margin: 0 auto;
+    color: rgb(0, 54, 58);
+    font-weight: bold;
+    width: 45%;
+    height: 5rem;
+    /* text-align: right; */
+}
+
+.show-instruction p {
+    margin: 0.2rem;
+}
+
+#update_memory_alarm {
+    display: none;
+}
+
+.appear-content {
+    color: rgb(53, 255, 2);
 }
