--- a/style.css
+++ b/style.css
@@ -410,3 +410,21 @@ p #errorLine_container p {
 #show-steps {
     margin: 0;
 }
+
+#social-meida_container {
+    display: flex;
+    justify-content: space-evenly;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+#social-meida_container a {
+    text-decoration: none;
+    color: white;
+    font-size: 1.2rem;
+}
+
+#social-meida_container i:hover {
+    color: rgb(122, 245, 183);
+}
